// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchContainer /> snapshots renders with default props 1`] = `
<SearchContainerstyles__Wrapper>
  <Box
    m="1rem auto"
    px="2rem"
    style={
      Object {
        "position": "relative",
      }
    }
    width={
      Array [
        1,
        1,
        1,
        0.7,
      ]
    }
  >
    <Leadstyles
      my={2}
    >
      search:title
    </Leadstyles>
    <InputComponent
      focusOnMount={true}
      onChange={[Function]}
      options={
        Object {
          "type": "text",
        }
      }
      placeholder="search:input-placeholder"
      value=""
    />
    <Connect(withI18nextTranslation(Apollo(SearchQuery)))
      query=""
    />
  </Box>
</SearchContainerstyles__Wrapper>
`;

exports[`<SearchContainer /> snapshots renders with latestQuery prop 1`] = `
<SearchContainerstyles__Wrapper>
  <Box
    m="1rem auto"
    px="2rem"
    style={
      Object {
        "position": "relative",
      }
    }
    width={
      Array [
        1,
        1,
        1,
        0.7,
      ]
    }
  >
    <Leadstyles
      my={2}
    >
      search:title
    </Leadstyles>
    <InputComponent
      focusOnMount={true}
      onChange={[Function]}
      options={
        Object {
          "type": "text",
        }
      }
      placeholder="search:input-placeholder"
      value="espoo"
    />
    <Connect(withI18nextTranslation(Apollo(SearchQuery)))
      query=""
    />
  </Box>
</SearchContainerstyles__Wrapper>
`;
